# openGL-GPU-Particle-Thinggy

./: CMakeLists.txt  PSIM.APS  PSIM.vcxproj  PSIM.vcxproj.filters  README.md  imgui.ini  main.cpp
Source Code/: PSIM.sln  PSIM.vcxproj  PSIM.vcxproj.filters  REQUIRMENTS.txt  main.cpp  particle_compute.glsl
shaders/: compute_shader.glsl  fragment_shader.glsl  vertex_shader.glsl
x64/cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  PSIM.sln  PSIM.vcxproj  PSIM.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
